kong/konga.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    description: Kong UI
  name: kong
---
apiVersion: v1
kind: Service
metadata:
  name: konga
  namespace: kong
  labels:
    app.kubernetes.io/name: konga
    app.kubernetes.io/instance: konga
spec:
  type: NodePort 
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      nodePort: 8080
      name: http
  selector:
    app.kubernetes.io/name: konga
    app.kubernetes.io/instance: konga
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: konga
  namespace: kong
  labels:
    app.kubernetes.io/name: konga
    app.kubernetes.io/instance: konga
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: konga
      app.kubernetes.io/instance: konga
  template:
    metadata:
      labels:
        app.kubernetes.io/name: konga
        app.kubernetes.io/instance: konga
    spec:
      containers:
        - env:
            - name: "DB_ADAPTER"
              value: "postgres"
            - name: "DB_URI"
              value: "postgresql://kong:kong@postgres/kong"
          name: konga
          image: pantsel/konga:next
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 1337
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          volumeMounts:
          - mountPath: /etc/konga-config-files
            name: config-file-volume
          resources:
            requests:
              cpu: 500m
              memory: 256Mi
      volumes:
      - configMap:
          defaultMode: 420
          name: konga-config-file
        name: config-file-volume
